https://github.com/xycpand/jpress.git

--- a/jpress/jpress-web/src/main/config/db-simple.properties
+++ b/jpress/jpress-web/src/main/config/db-simple.properties
@@ -1,5 +1,5 @@
-db_host = 127.0.0.1
+db_host = 115.29.7.155
 db_name = jpress
-db_user = root
-db_password =
-db_tablePrefix =  
+db_user = mtuser
+db_password = mtuser
+db_tablePrefix = jpress_ 
